[package]
name = "log_analyzer"
version = "0.1.0"
edition = "2021"
description = "A CLI-based structured web server log analyzer"

[[bin]]
name = "log_analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
